packages/dashboard/src/components/widgets/widget.css
@import "../../styles/variables.css";

.widget {
  position: absolute;
  height: 100%;
  overflow: hidden;
  user-select: none;
  box-sizing: content-box;
}

.widget-editable {
  /* Keeps widget in line with widget when selected */
  border: var(--selection-border-width) solid transparent;
}

.widget-editable:hover {
  border: var(--selection-border-width) solid var(--selection-color-secondary);
  cursor: all-scroll;
  border-radius: var(--selection-radius-small);
}

.widget-readonly {
  user-select: auto;
}

.widget-readonly:hover {
  cursor: default;
}

.widget-editable.widget-selected {
  border: var(--selection-border-width) solid var(--selection-color-secondary);
  border-radius: var(--selection-radius);
}

.widget-content {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;

  /* override the more specific dashboard selector
  which is being used to reset amplify stylesheet */
  box-sizing: border-box !important;
}

